@@ -1378,9 +1378,10 @@ public class DocxOutputImpl extends DefaultHandler {
             // If the previous run ends with white space, as it is not relevant in this run, remove it from
             // the beginning of this run (i.e. trim left).
             // When adding text multiple times to the same run (i.e. runCharactersNumber > 0), the implemented
-            // test does not work as expected. 
+            // test does not work as expected.
             if (runNumber > 0 && runCharactersNumber == 0) {
-                XWPFRun previous = paragraph.getLast().getRuns().get(runNumber - 1);
+                List<XWPFRun> runs = paragraph.getLast().getRuns();
+                XWPFRun previous = runs.get(runs.size() - 1);
                 if (previous.getCTR().getFootnoteReferenceList().size() == 0) {
                     String prevText = previous.text();
 
